# Behrend_UAS_2025-2026

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  requirements-dev.txt
.github/rulesets/: README.md  main-protection.json
.github/workflows/: ci.yml
Computer Vision/: camera.py  output.avi
Jetson Nano Testing/: README.md  camera_test.py  requirements.txt
ObjectDetection/: ObjectDetection-Guide.md  augment_dataset.py  evaluate.py  export_onnx.py  infer.py  od_lib.py  requirements.txt  split_dataset.py  train.py  verify_labels.py
ObjectDetection/blender/hdris/: cloudy_netted_nursery_1k.hdr
ObjectDetection/blender/scenes/: tent.blend  tent.blend1
ObjectDetection/blender/scripts/: render_mannequin.py  render_tent.py
ObjectDetection/training/: dataset.yaml  real_finetune.yaml
Testing/Jetson Nano/: README.md  camera_test.py  requirements.txt
Testing/PIXHAWK/: nano_pixhawk_usbc_connection.py  requirements.txt  servo_control_usbc.py
docs/: HARDWARE_RUNBOOK.md  HARDWARE_TODO.md  SIMULATION.md
embedded/: CMakeLists.txt  README.md
embedded/src/: geometry.hpp  main.cpp  yolo_infer.cpp  yolo_infer.hpp
embedded/tests/: test_geometry.cpp
integration/: README.md  calibrate.py  camera.py  control.py  decision.py  detector.py  perception_control_node.py  requirements.txt  sim.py  sim_run.py  visualize.py
px4_control/: reboot.py
testing/Jetson Nano/: main.py
testing/PIXHAWK/: servo_control_usbc.py
tests/: conftest.py  test_augment.py  test_bbox_conversion.py  test_dataset_split.py  test_decision_logic.py  test_distance.py  test_label_parsing.py  test_node_loop.py  test_sim.py
